// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Entropy component matches the snapshot when drawn upon and insufficient entropy 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "rgb(5, 5, 13)",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(255, 239, 223)",
          "fontFamily": "TT Commons",
          "fontSize": 20,
          "paddingHorizontal": "5%",
          "position": "absolute",
          "textAlign": "center",
          "top": "20%",
        },
        Object {
          "fontSize": 42,
        },
      ]
    }
  >
    50 %
  </Text>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <MaskedImageComponent
      addPoint={[Function]}
      disabled={false}
    />
  </View>
  <View
    style={
      Object {
        "bottom": "5%",
        "position": "absolute",
      }
    }
  />
</Container>
`;

exports[`Entropy component matches the snapshot when not drawn upon and insufficient entropy 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "rgb(5, 5, 13)",
    }
  }
>
  <Text
    style={
      Object {
        "color": "rgb(255, 239, 223)",
        "fontFamily": "TT Commons",
        "fontSize": 20,
        "paddingHorizontal": "5%",
        "position": "absolute",
        "textAlign": "center",
        "top": "20%",
      }
    }
  >
    For security purposes, we need some randomness. Please tap the screen and draw on it randomly
  </Text>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <MaskedImageComponent
      addPoint={[Function]}
      disabled={false}
    />
  </View>
  <View
    style={
      Object {
        "bottom": "5%",
        "position": "absolute",
      }
    }
  />
</Container>
`;

exports[`Entropy component matches the snapshot with when drawn upon and sufficient entropy 1`] = `
<Container
  style={
    Object {
      "backgroundColor": "rgb(5, 5, 13)",
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgb(255, 239, 223)",
          "fontFamily": "TT Commons",
          "fontSize": 20,
          "paddingHorizontal": "5%",
          "position": "absolute",
          "textAlign": "center",
          "top": "20%",
        },
        Object {
          "fontSize": 42,
        },
      ]
    }
  >
    100 %
  </Text>
  <View
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <MaskedImageComponent
      addPoint={[Function]}
      disabled={true}
    />
  </View>
  <View
    style={
      Object {
        "bottom": "5%",
        "position": "absolute",
      }
    }
  >
    <ThemedComponent
      onPress={[Function]}
      raised={true}
      style={
        Object {
          "container": Object {
            "backgroundColor": "rgb(148, 47, 81)",
            "borderRadius": 4,
            "height": 48,
            "minWidth": 164,
          },
          "text": Object {
            "color": "white",
            "fontFamily": "TT Commons",
            "fontSize": 22,
            "fontWeight": "normal",
            "paddingVertical": 16,
          },
        }
      }
      text="Continue"
      upperCase={false}
    />
  </View>
</Container>
`;
